<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llContainer"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="3dp"
    android:background="@color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/llWeatherImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivWeatherIcon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/circle" />

            <com.sneha.weather.widget.MyCustomFontBold
                android:id="@+id/tvDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <com.sneha.weather.widget.MyCustomFontRegular
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llTemperature"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical"
            android:padding="5dp"
            android:weightSum="4">

            <LinearLayout
                android:id="@+id/llTemp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:padding="5dp"
                android:weightSum="2">

                <LinearLayout
                    android:id="@+id/llTempMin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <com.sneha.weather.widget.MyCustomFontRegular
                        android:id="@+id/tvMin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/min"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                    <com.sneha.weather.widget.MyCustomFontBold
                        android:id="@+id/tvValMin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llTempMax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <com.sneha.weather.widget.MyCustomFontRegular
                        android:id="@+id/tvMax"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/max"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                    <com.sneha.weather.widget.MyCustomFontBold
                        android:id="@+id/tvValMax"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/transGreyDark" />

            <LinearLayout
                android:id="@+id/llWeatherCondition"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:weightSum="2">

                <LinearLayout
                    android:id="@+id/llTempName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <com.sneha.weather.widget.MyCustomFontRegular
                        android:id="@+id/tvMorning"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="@string/morning"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                    <com.sneha.weather.widget.MyCustomFontRegular
                        android:id="@+id/tvEvening"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/evening"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                    <com.sneha.weather.widget.MyCustomFontRegular
                        android:id="@+id/tvNight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/night"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                    <com.sneha.weather.widget.MyCustomFontRegular
                        android:id="@+id/tvWinds"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/winds"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                    <com.sneha.weather.widget.MyCustomFontRegular
                        android:id="@+id/tvCondition"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/condition"
                        android:textColor="@color/white"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llTempValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <com.sneha.weather.widget.MyCustomFontRegular
                        android:id="@+id/tvValMorning"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <com.sneha.weather.widget.MyCustomFontRegular
                        android:id="@+id/tvValEvening"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <com.sneha.weather.widget.MyCustomFontRegular
                        android:id="@+id/tvValNight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <com.sneha.weather.widget.MyCustomFontRegular
                        android:id="@+id/tvValWinds"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <com.sneha.weather.widget.MyCustomFontRegular
                        android:id="@+id/tvValCondition"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

    <View
        android:id="@+id/vwhiteLine"
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/white"
        android:visibility="visible"/>

</LinearLayout>